--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,6 +14,7 @@
 
     body {
         background: white;
+    
     }
 
     .window {
@@ -1077,9 +1076,8 @@
 </style>
 
 <body id="body" style="display:flex; align-items: center;justify-content: center;height: 100vh;">
-    <audio controls autoplay> <source src="audio/Tieng-cuoi-ong-gia-Noel-www_tiengdong_com.mp3"> </audio> 
-    <audio controls autoplay loop><source src="audio/y2mate.com - Jingle Bells with Lyrics  Christmas Songs HD  Christmas Songs and Carols.mp3" type="audio/mpeg"> </audio>
-    <div id="btn" style="width:30%;">
+    <audio  autoplay> <source src="Tieng-cuoi-ong-gia-Noel-www_tiengdong_com.mp3"> </audio> 
+    <audio  autoplay loop><source src="y2mate.com - Jingle Bells with Lyrics  Christmas Songs HD  Christmas Songs and Carols.mp3" type="audio/mpeg"> </audio>
     <div id="btn" style="width:30%;">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 150 88.4" enable-background="new 0 0 150 88.4" xml:space="preserve" style="fill: rgb(0, 0, 0);" role="img" aria-label="Valentine Envelope Line Icon">
             <path d="M60.1,38.6c3.4-3.4,9-3.4,12.4,0l1.2,1.1l1.2-1.1c3.4-3.4,9-3.4,12.4,0c0.4,0.4,0.7,0.7,1,1.1L140,4.8H10.1  L60.1,38.6L60.1,38.6z" style="fill: none;"></path>
@@ -1089,7 +1087,6 @@
             </svg>
             <h1 style="text-align: center;color:#de2f32">Nhấn vào thư nhé !!!</h1>
     </div>
-    
    <div class="christmas" >
     <div class="message">
         <h1>Merry Christmas!</h1>
@@ -1128,6 +1125,8 @@
             document.querySelector("#body").style.background="#de2f32";
         }
    </script>
+   <div id="audio">
+</div>
 </body>
 
 </html>
